Refined some styles. Turns out the left align on refresh isn't a bug.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+/* Hope this one is obvious. */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+/* Some general rules for the document as a whole. */
 * {
     margin: 0;
     padding: 0;
@@ -9,8 +11,8 @@
     line-height: 1.5;
 }
 
+/* Grid setup and display */
 body {
-    font: 13px Helvetica, Arial;
     display: grid;
     grid-template-columns: 80% 20%;
     grid-template-rows: 38% 38% 24%;
@@ -20,6 +22,7 @@ body {
     background-color: #5C7E9C;
 }
 
+/* Define header placement and coloring */
 header {
     grid-row: 1;
     grid-column: 2;
@@ -27,14 +30,21 @@ header {
     padding: 15px;
 }
 
-header p, header h1, header h2, a {
+/* Because why would the * rule actually work? */
+header p,
+header h1,
+header h2,
+a {
     color: #DDD;
 }
 
-header h2, header h1 {
+/* Mess with the headings, make sure they aren't too tight */
+header h2,
+header h1 {
     margin-bottom: 10px;
 }
 
+/* Form styling, places it in the grid and colors it */
 form {
     grid-row: 3;
     grid-column: 1;
@@ -45,33 +55,42 @@ form {
     height: 100%;
 }
 
-form input, textarea {
+/* Text input stylings */
+form input,
+textarea {
     width: 76%;
     margin: 10px;
     min-height: 40px;
     background-color: #DDD;
 }
 
-form input, textarea, select {
+/* Stylize the 3 form elements in similar ways */
+form input,
+textarea,
+select {
     background-color: #DDD;
     border-radius: 5px;
     border: 0;
     padding: 10px;
 }
 
+/* Ensure the title isn't massive or anything */
 form #title {
     height: 40px;
 }
 
+/* Gotta make the descript larger */
 form #description {
     height: 50%;
 }
 
+/* Select button unique styling */
 form select {
     float: right;
     width: 20%;
 }
 
+/* Submit button styling */
 button {
     grid-row: 3;
     grid-column: 2;
@@ -84,10 +103,31 @@ button {
     border-radius: 5px;
 }
 
+/* On press coloring for the button */
 button:active {
     background: #4B4D5F;
 }
 
+/* Bless Codepen */
+/* The next 3 style the scrollbar */
+.scroll::-webkit-scrollbar-track {
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    border-radius: 10px;
+    background-color: #BBB;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 12px;
+    background-color: #BBB;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);*/
+    background-color: #5C7E9C;
+}
+
+/* Styles the main notificaiton window */
 #notiLog {
     background-color: #4B4D5F;
     grid-row: 1 / 3;
@@ -99,9 +139,10 @@ button:active {
     border-right: 5px #BBB solid;
     border-bottom: 5px #BBB solid;
     border-radius: 5px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
+/* Styling for the actual notifications in the notiLog */
 #notiLog li {
     display: block;
     width: 60%;
@@ -111,6 +152,7 @@ button:active {
     border-radius: 5px;
 }
 
+/* Place the footer in the DOM, color it */
 footer {
     background-color: #5C7E9C;
     grid-row: 2;
@@ -118,6 +160,8 @@ footer {
     padding: 10px;
 }
 
+/* Below this are the unique stylings for messages */
+/* Colors change the background color and define the border */
 .gray {
     background-color: #BBB;
     border-right: 10px solid #6f6f6f;
@@ -142,6 +186,7 @@ footer {
     border-left: 10px solid #811b11;
 }
 
+/* Right and Left change the float and text-align depending on origin */
 .right {
     float: right;
     text-align: right;
@@ -154,6 +199,7 @@ footer {
     border-right: 0px;
 }
 
+/* Helps the formatting slightly below 660px wide */
 @media only screen and (max-width: 660px) {
     body {
         width: 100%;
